# LoanAI

./: .gitignore  QUICK_START.md  README.md  package-lock.json  package.json  restart-ai-agent.sh  start-all.sh  start-proxy.sh  stop-all.sh
AI_agent/: .env.example  README.md  SUMMARY.md  api_server.py  requirements.txt  start_server.sh
AI_agent/config/: __init__.py  agent_config.yaml  settings.py
AI_agent/loanai_agent/: __init__.py  main.py
AI_agent/loanai_agent/agents/: bank_statement.py  loan_officer.py  salary_statement.py  verification.py
AI_agent/loanai_agent/models/: __init__.py  decision.py
AI_agent/loanai_agent/protocols/: __init__.py  communication.py  decision_engine.py  decision_strategy.py
AI_agent/loanai_agent/tools/: analysis_tools.py  document_templates.py  verification_tools.py
AI_agent/loanai_agent/utils/: __init__.py  config_validator.py  exceptions.py  gcs_client.py  helpers.py
AI_agent/tests/: conftest.py  test_models.py
Docs/: Agent-Dataflow.md  Loan-agent-architacture.md
Docs/Agent/: Database-overview.md
Docs/Backend/: ARCHITECTURE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_README.md  QUICKSTART.md  SETUP_COMPLETE.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  QUICK_REFERENCE.md  USAGE.md  api_examples.py  demo.py  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/loanai_agent/agents/: __init__.py  bank_statement.py  base_agent.py  loan_officer.py  verification.py
backend/loanai_agent/models/: schemas.py
backend/loanai_agent/protocols/: communication.py
backend/loanai_agent/tools/: __init__.py  analysis_tools.py
backend/loanai_agent/utils/: __init__.py  logger.py
config/: setup-proxy.sh
scripts/: check-backend.js  database-queries.sql  test-backend.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/admin/: page.tsx
src/app/api/health/: route.ts
src/app/api/loan-application/: route.ts
src/app/api/upload-document/: route.ts
src/app/contact/: page.tsx
src/components/feature/: LandingPage.tsx  LoanForm.tsx  Result.tsx
src/components/feature/steps/: DocumentsStep.tsx  EducationStep.tsx  (+3 more)
src/components/layout/: Navbar.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Stepper.tsx
src/lib/: db.ts  storage.ts
src/types/: form.ts
test-user/: FIX_SUMMARY.md  README.md  run-test.sh  submit-test-user.js  submit-test-user.py  verify-fix.sh
